# mycalender

./: README.md  SettingsActivity.java  build.gradle  calenderappkey.jks  calenderuploadkey.jks  deployment_cert.der  gradle.properties  local.properties  mycalendar_strings.docx  mycalender_key.jks  myclander_string_table.docx  mythreya_privacy.html  old_events.db  private_key.pepk  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: geonames.db
app/src/main/assets/databases/: Events.db  geonames.db
app/src/main/cpp/: Date.c  swedate.h  swehouse.c
app/src/main/java/: GeoLocation.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/drawable-anydpi/: ic_action_reset.xml
app/src/main/res/drawable-anydpi-v24/: ic_noti_panchang.xml
app/src/main/res/layout/: activity_do_alaram.xml  activity_geolocations.xml  activity_geomaps.xml  activity_help.xml  activity_launcher.xml  activity_main.xml  activity_show_events.xml  activity_tab_demo.xml  content_main.xml  eph_page_view.xml  ephlist_item.xml  eventlist_item.xml  events_page_view.xml  fragment_get_year.xml  geolist_item.xml  locactivity.xml  location_dlg_fragment.xml  pref_dialog_time.xml  preference_spinner.xml  preference_theme.xml  seekbarpreference.xml  settings_activity.xml  tabbed_activity.xml  theme_view.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: iconimage.xml
app/src/main/res/raw/: ld1.m4a  ld10.m4a  (+28 more)
(+116 files in other folders)
